ingress/ingress-rules/ingress-2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "route"
    #nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    #nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    #nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    #nginx.ingress.kubernetes.io/affinity-mode: persistent
    #nginx.ingress.kubernetes.io/configuration-snippet: |
    #  proxy_set_header X-Script-Name /app;
    # nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    #nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
    - secretName: 35.238.113.121.nip.io-tls
      hosts:
      - 35.238.113.121.nip.io
  rules:
  - host: "35.238.113.121.nip.io"
    http:
      paths:

      - pathType: ImplementationSpecific
        path: /development/jupyter
        backend:
          service:
            name: ingress-jupyter 
            port:
              number: 80

      - pathType: ImplementationSpecific
        path: /pgadmin-stage
        backend:
          service:
            name: pgadmin-service
            port:
              number: 80
      
      - pathType: ImplementationSpecific
        path: /nifi
        backend:
          service:
            name: nifi-nodeport-service
            port:
              number: 9080


      - path: /dataprocessing/airflow
        pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-airflow
            port:
              number: 8080

      - path: /dumbworks/prometheus/
        pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090


      - path: /dumbworks/grafana
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
